Added cookie HTML

--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
     <title>Cookie Consent Banner</title>
   </head>
   <body>
-    <section class="cookie-consent"></section>
+    <section class="cookie-consent">
+      <div class="cookie-body">
+        <div class="cookie-title">We use cookies</div>
+        <p>
+          By clicking "Accept All Cookies", you agree to the storing of cookies
+          on your device to enhance site navigation, analyze site usage, and
+          assist in our marketing efforts. Please visit our
+          <a href="#">Privacy Policy</a> to learn more.
+        </p>
+      </div>
+      <div class="cookie-option">
+        <button>Accept All Cookies</button>
+        <button>Reject All</button>
+        <a href="#">Cookies Settings</a>
+      </div>
+    </section>
   </body>
 </html>
